adding paw wires

--- a/demo/paw.wires/src/scss/_styles.scss
+++ b/demo/paw.wires/src/scss/_styles.scss
@@ -162,7 +162,7 @@ hr {
 }
 
 // Demo Only
-/* .trail {
+ .trail {
   &::before {
     content: ' ';
     height: 8px;
@@ -179,7 +179,7 @@ hr {
       top: -7px;
     }
   }
-} */
+} 
 
 //
 // PERSISTENT ELEMENTS
