adding paw wires

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2825,6 +2825,10 @@ ul.bookmarks li a {
   padding-right: 4px;
 }
 
+.button-group {
+  margin-bottom: 48px;
+}
+
 .contact a {
   color: #e33c42;
 }
