--- a/demo/paw.wires/src/scss/_styles.scss
+++ b/demo/paw.wires/src/scss/_styles.scss
@@ -251,6 +251,7 @@ hr {
 // Navigation
 .navigation {
   @include span-columns(8);
+  padding-top: $half-space;
   padding-left: $half-space;
   margin-right:0;
 
