--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -12,6 +12,7 @@ $primary-color-medium: darken($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 25%) !default;
 $secondary-color: #ffcc2f;
 $white: #FFFFFF !default;
+$black: #212121 !default;
 $off-white-color: #f4f4f4;
 $subtle-gray: #F6F6F6 !default;
 $light-gray: #F2F0F0 !default;
