--- a/src/scss/_everhood.scss
+++ b/src/scss/_everhood.scss
@@ -28,6 +28,16 @@
     }
   }
 
+  &.mena {
+    background-color: #7d4c92;
+    color: $white;
+    height: 90vh;
+    
+    .page__title {
+      color: $white;
+    }
+  }
+
   &.cpl {
     background-color: $white;
     color: #c21f2f;
@@ -44,11 +54,14 @@
 
   &.paw {
     background-color: $white;
-    color: $paw;
     height: 90vh;
 
     .page__title {
       color: $paw;
+    }
+
+    .description {
+      color: $black;
     }
 
     .button--previous {
@@ -119,7 +132,11 @@
 .position-top-left {
   position: absolute;
   top: 4em;
-  left: 4em;
+  left: $page-margin--mobile;
+
+  @include media($sm-breakpoint) {
+    left: $page-margin--tablet;
+  }
 }
 
 .title-image {
@@ -197,10 +214,15 @@ ul.bookmarks {
   }
 }
 
+ul.portfolio {
+  a {
+    color: $scrap-green;
+  }
+}
+
 .button--previous {
   font-size: 20px;
   color: white;
-  font-weight: 600;
 
   span {
     font-size: 17px;
