--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -40,6 +40,8 @@
 @import "components/slick/slick";
 @import "components/slick/slick-theme";
 @import "components/button";
+@import "components/article";
+@import "components/panel";
 @import "components/list";
 
 /* custom */
