--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -42,15 +42,23 @@ $page-margin: 20px; // grid(5)
 .container {
   overflow: hidden;
   position: relative;
+}
 
-  &.size-to-window  {
-    @include media($md-breakpoint) {
-      width: 100%;
-      height: 100vh;
-      max-height: 850px;
-    }    
+.wrap {
+  padding: $wrap-padding 0;
+  @include containerize;
+  @include media(max-width $medium) {
+    padding: 6em 0;
+  }
+  img {
+    width:100%;
+  }
+  .logo {
+    width:50%;
+    margin-bottom:3em;
   }
 }
+
 
 // Layout Helpers
 .relative {
