--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,7 +9,7 @@
 /* Mixins */
 @import 'mixins/bem';
 @import 'mixins/clearfix';
-@import 'mixins/clickable';
+@import 'mixins/buttonize';
 @import 'mixins/containerize';
 @import 'mixins/grid';
 @import 'mixins/iconize';
