--- a/src/templates/pages/work/cpl.html
+++ b/src/templates/pages/work/cpl.html
@@ -1,9 +1,9 @@
 ---
-title: Cambridge <wbr />Public Library
+title: Cambridge Public Library
 description: Wayfinding and Signage
 ---
 
-{{> header }}
+{{> header}}
 
 <main class="container">
   <div class="row flex flex--justify pad-default">
