--- a/src/templates/pages/work/mena.html
+++ b/src/templates/pages/work/mena.html
@@ -1,9 +1,9 @@
 ---
-title: Mass. Emergency <wbr />Nurse Association
+title: Mass. Emergency Nurse Association
 description: Site Design and Build
 ---
 
-{{> header }}
+{{> header}}
 
 <main class="container">
   <div class="row flex flex--justify pad-default">
