--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -1,8 +1,8 @@
 <header class="container size-to-window intro masthead {{page}}">
   <div class="row flex flex-align--center flex--justify fill-height">
     <nav class="position-top-left">
-      <a href="/portfolio/all.html" class="button--previous"
-        ><span class="icons-skip-back"></span>Back</a
+      <a href="/work/all.html" class="button--previous"
+        ><span class="icons-skip-back"></span>$ cd ..</a
       >
     </nav>
     <div class="column half text--center">
