--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -172,8 +172,13 @@ description: My name is Kyle Langford, and this is my Web Design and Development
       <p class="list-title">Links</p>
       <ul class="pretty">
         <li class="list__item">
-          <a href="/pages/bookmarks.html"
+          <a href="/bookmarks.html"
             ><span class="icon-list icons-bookmark"> </span>Bookmarks</a
+          >
+        </li>
+        <li class="list__item">
+          <a href="/work/all.html"
+            ><span class="icon-list icons-lock"></span>Portfolio</a
           >
         </li>
         <li class="list__item">
