--- a/src/templates/pages/work/paw.html
+++ b/src/templates/pages/work/paw.html
@@ -1,9 +1,9 @@
 ---
-title: Mass. PAW
+title: PAW
 description: Site Design and Build
 ---
 
-{{> header }}
+{{> header}}
 
 <main class="container">
   <div class="row flex flex--justify pad-default">
