--- a/src/templates/partials/nav.html
+++ b/src/templates/partials/nav.html
@@ -2,9 +2,8 @@
 <nav class="primary">
   <div class="container">
     <div class="knockout">
-      <!-- <p class="list-title">Menu</p> -->
+      <p class="list-title">Menu</p>
       <ul class="menu">
-        <!-- <li class="list__item">Portfolio Coming Soon!</li>-->
         <li class="list__item">
           <a href="/articles/all.html">Blog</a>
         </li>
